# timemachine

./: .clang-format  .dir-locals.el  .dockerignore  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  BaseDockerfile  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  Reference Tests.ipynb  compile_commands.json  environment.yml  example.xml  flake.nix  formaldehyde.xml  hydrogen.xml  launch_workers.sh  make_plots.py  methane.xml  propane.xml  pyproject.toml  pyrightconfig.json  pytest.ini  repro.py  requirements.txt  setup.cfg  setup.py  shell.nix  test_reference.py  ti_Debug.py  ti_solvation.py  (+6 more)
.circleci/: config.yml
.ipynb_checkpoints/: Reference Tests-checkpoint.ipynb  timemachine harmonic_bond example-checkpoint.ipynb
attic/: readme.md
barostat/: barostat.py  box_scaling.py  ensembles.py  moves.py  potentials.py  utils.py
ci/: requirements.txt
control_variates/: stein.py
datasets/: readme.md
deprecated_tests/: deprecated_test_system.py
docking/: dock_and_equilibrate.py  dock_setup.py  pose_dock.py  relative_docking.py  report.py  rigorous_work.py
docs/: paper.tex
examples/: absolute_hydration_energy.py  ahfe.py  biphenyl_torsion_sampling_hrex.py  bulk_water_langevin_ncmc.py  estimator_variance.py  fit_to_cycles.py  fit_water.ipynb  fit_water.py  guest-1.mol2  host_acd.xml  host_acd.xyz  npt_equilibration.py  npt_equilibration_at_multiple_lambdas.py  npt_simulation.py  optimize_protocol.py  overlap_test.py  potential_energy.py  rbfe_edge_list.py  rbfe_single.py  readme.md  refit_freesolv.py  relative_binding_free_energy.py  relative_free_energy.py  rhfe.py  rhfe_dual.py  rhfe_single.py  run_from_pickle.py  run_rbfe_legs.py  run_smc.py  run_smc_on_biphenyl.py  run_smc_on_freesolv.py  rvfe_single.py  sifting.py  simulate_vacuum_and_hydration.py  train_to_rbfe.py  u_x_lam_params.py  validate_chiral_restraints.py  validate_relative_binding.py  validate_relative_hydration.py  validate_solvent_perturbations.py  (+4 more)
fe/: PDBWriter.py  absolute.py  absolute_ensemble.py  absolute_hydration.py  atom_mapping.py  bar.py  common.py  cycles.py  dataset.py  endpoint_correction.py  estimator.py  estimator_abfe.py  frames.py  free_energy.py  free_energy_rabfe.py  free_energy_v2.py  functional.py  host_only.py  inference_abfe.py  linear_mixer.py  loss.py  math_utils.py  model.py  model_rabfe.py  model_utils.py  parameterize.py  parameterize_abfe_multi.py  parameterize_batch.py  parameterize_batch_ct.py  parameterize_batch_thermostat.py  parameterize_exp.py  parameterize_insertion.py  parameterize_lambda.py  parameterize_rbfe_ti.py  parameterize_rbfe_ti_multi.py  parameterize_simple.py  parameterize_small_molecule.py  parameterize_ti.py  pdb_writer.py  protocol_optimization.py  (+11 more)
ff/: __init__.py  alchemical_merge.py  charges.py  compare_forcefields.py  debug.py  forcefield.py  openmm_converter.py  readme.md  smirnoff_1.1.0.merckQmod.py  smirnoff_1.1.0.py  smirnoff_1.1.0_recharge.py  smirnoff_1.1.0_zero_charges.py  smirnoff_1.3.1.xml  smirnoff_converter.py  system.py  test_forcefield.py  test_jvp.py
jax/: autograd_analytic.py  complex_numbers.py  fog.py  fog2.py  harmonic_d2ij.py  harmonic_dij.py  harmonic_dij_abs.py  harmonic_dij_clean.py  harmonic_dij_vv.py  jax_1d.py  jax_1d_harmonic.py  jax_test.py  jvp_test.py  nans.py  reciprocal_energy.py  tf_vs_jax.py
md/: __init__.py  builders.py  enhanced.py  enhanced_sampling.py  ensembles.py  fire.py  minimizer.py  moves.py  noneq.py  recipe.py  smc.py  states.py  utils.py
nix/: sources.json
old_tests/: test_jax_utils.py  test_linear_mixing.py  test_reverse_mode.py
optimize/: precondition.py  protocol.py  step.py  utils.py
parallel/: client.py  constants.py  jank_executor.py  launch_workers.sh  service_pb2.py  service_pb2_grpc.py  utils.py  worker.py
scripts/: adapt_noneq.py  bootstrap_am1.py  readme.md
slow_tests/: test_barostat.py  test_barostat_molecular_ideal_gas.py  test_barostat_slow.py  test_barostat_water_density.py  test_benchmark.py  test_determinism.py  (+9 more)
timemachine/cpp/: CMakeLists.txt  generate_stubs
timemachine/cpp/src/: alchemical_gradient.cu  alchemical_gradient.hpp  all_atom_energies.cu  all_atom_energies.hpp  barostat.cu  barostat.hpp  bd_exchange_move.cu  bd_exchange_move.hpp  bitplay.cu  bitplay.hpp  boresch_like_restraint.cu  boresch_like_restraint.hpp  bound_potential.cu  bound_potential.hpp  centroid_restraint.cu  centroid_restraint.hpp  chiral_atom_restraint.cu  chiral_atom_restraint.hpp  chiral_bond_restraint.cu  chiral_bond_restraint.hpp  constants.hpp  context.cu  context.hpp  custom_bonded_gpu.cu  custom_bonded_gpu.hpp  custom_nonbonded_gpu.cu  custom_nonbonded_gpu.hpp  device_buffer.cu  device_buffer.hpp  electrostatics.cu  electrostatics.hpp  energy_accumulation.cu  energy_accumulation.hpp  exceptions.hpp  exchange.cu  exchange.hpp  exchange_mover.cpp  exchange_mover.hpp  fanout_summed_potential.cu  fanout_summed_potential.hpp  (+140 more)
timemachine/cpp/src/kernels/: __init__.py  chiral_utils.cuh  k_barostat.cuh  k_bonded.cuh  k_bonded_deterministic.cuh  k_boresch.cuh  k_centroid_restraint.cuh  k_chiral_restraint.cuh  k_electrostatics.cuh  k_electrostatics_jvp.cuh  k_exchange.cu  k_exchange.cuh  k_find_block_bounds.cu  k_find_block_bounds.cuh  k_fire_minimizer.cuh  k_fixed_point.cuh  k_flat_bottom.cuh  k_flat_bottom_bond.cuh  k_gbsa.cuh  k_gbsa_jvp.cuh  k_harmonic_angle.cuh  k_harmonic_angle_stable.cuh  k_harmonic_bond.cuh  k_hilbert.cu  k_hilbert.cuh  k_indices.cu  k_indices.cuh  k_integrator.cuh  k_integrator_optimized.cuh  k_lambda_transformer.cu  k_lambda_transformer.cuh  k_lambda_transformer_jit.cuh  k_lennard_jones.cuh  k_lennard_jones_jvp.cuh  k_local_md.cuh  k_log_flat_bottom_bond.cuh  k_logsumexp.cu  k_logsumexp.cuh  k_neighborlist.cu  k_neighborlist.cuh  (+26 more)
timemachine/cpp/tests/: common.py  test_bonded.py  test_gbsa.py  test_integrator.py  test_nonbonded.py  test_nonbonded_v2.py  test_optimizers.py  test_overfitting.py  test_potentials.py  test_reverse_mode.py  test_reverse_mode_v2.py  test_ti.py
(+732 files in other folders)
