[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = [
  "has-type",
  "misc",
  "var-annotated"
]

[[tool.mypy.overrides]]
module = "timemachine._vendored.fire"
follow_imports = "silent"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "NPY", # numpy-specific rules
  "UP", # pyupgrade
  "RUF", # ruff-specific
  "W", # warning
]
ignore = [
  "E402", # Module level import not at top of file
  "E501", # Line too long
  "E731", # Do not assign a lambda expression, use a def
  "E741", # Do not use variables named 'I', 'O', or 'l'

  "NPY002", # Replace legacy `np.random.choice` call with `np.random.Generator`
  "NPY201", # `np.trapz` will be removed in NumPy 2.0. Use `numpy.trapezoid` on NumPy 2.0, or ignore this warning on earlier versions.

  "RUF002", # Docstring contains ambiguous `–` (EN DASH). Did you mean `-` (HYPHEN-MINUS)?
  "RUF005", # Consider `[*xi_k_sub_1, xvb]` instead of concatenation
  "RUF015", # Prefer `next(...)` over single element slice

  "UP006", # Use `type` instead of `Type` for type annotation
  "UP008", # Use `super()` instead of `super(__class__, self)`
  "UP028", # Replace `yield` over `for` loop with `yield from`
  "UP035", # e.g. `typing.List` is deprecated, use `list` instead
]

[build-system]
requires = [
  # Need cmake/mypy if building the C++, only supported on linux
  "cmake==3.24.3; sys_platform == 'linux'",
  "mypy==1.14.1; sys_platform == 'linux'",
  "setuptools >= 64.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
