[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = [
    "has-type",
    "misc",
    "var-annotated"
]

[[tool.mypy.overrides]]
module = "timemachine._vendored.fire"
follow_imports = "silent"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
   "E", # pycodestyle
   "F", # Pyflakes
   "I", # isort
]
ignore = [
  "E402", # Module level import not at top of file
  "E501", # Line too long
  "E731", # Do not assign a lambda expression, use a def
  "E741", # Do not use variables named 'I', 'O', or 'l'
]

[build-system]
requires = [
  # Need cmake/mypy if building the C++, only supported on linux
  "cmake==3.24.3; sys_platform == 'linux'",
  "mypy==1.14.1; sys_platform == 'linux'",
  "setuptools >= 64.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
